--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Ideal React Seed </title>
+        <title>React Pro</title>
     </head>
     <body>
         <div id="app"></div>
